<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/activity_menu_new"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="newGame"
        android:text="@string/menu_new" />

    <TextView
        android:id="@+id/activity_menu_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_remember"
        android:textAlignment="center"
        android:textSize="20sp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activity_menu_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:id="@+id/activity_menu_open_colorpicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="openColorPicker"
            android:text="@string/menu_open_colorpicker"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/activity_menu_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_color_to_find"
            android:textAlignment="center"
            android:textSize="18sp" />

        <FrameLayout
            android:id="@+id/activity_menu_result_expected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_color_input"
            android:textAlignment="center"
            android:textSize="18sp" />

        <FrameLayout
            android:id="@+id/activity_menu_result_given"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_menu_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="validate"
        android:text="@string/menu_validate" />

</LinearLayout>